--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
                 <a href="#">USD</a>
                 <a href="#">KRW</a>
                 <a href="#">VND</a>
+                <a href="#">IDR</a>
+                <a href="#">JPY</a>
+                <a href="#">EUR</a>
+                <a href="#">ARS</a>
+                <a href="#">CZK</a>
             </div>
         </div>
         <div class="input-area">
             <input type="number" id="from-input" onkeyup="convert()"/>
-            <div id="from-result"></div>
+            <div id="from-result">원</div>
         </div>
     </div>
     <p class="equal"></p>
@@ -34,11 +39,16 @@
                 <a href="#">USD</a>
                 <a href="#">KRW</a>
                 <a href="#">VND</a>
+                <a href="#">IDR</a>
+                <a href="#">JPY</a>
+                <a href="#">EUR</a>
+                <a href="#">ARS</a>
+                <a href="#">CZK</a>
             </div>
         </div>
         <div class="input-area">
             <input type="number" id="to-input" onkeyup="unconvert()"/>
-            <div id="to-result"></div>
+            <div id="to-result">달러</div>
         </div>
     </div>
 
